<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/table_felt"
   tools:context="com.example.lenni.blackjack_ptm.SettingsActivity">
   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/TextView"
      android:text="@string/Difficulty_tv"
      android:textColor="#FFFFFF"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/difficulty_pick"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintVertical_bias="0.00999999"/>
   <RadioGroup
      android:id="@+id/difficulty_pick"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/player_et"
      app:layout_constraintVertical_bias="0.29000002">

      <RadioButton
         android:id="@+id/normal_difficulty"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/normal_difficulty"
         android:textColor="#FFFFFF"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="139dp"
         android:checked="true"/>

      <RadioButton
         android:id="@+id/different_difficulty"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/different_difficulty"
         android:textColor="#FFFFFF"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="426dp"/>
   </RadioGroup>

   <TextView
      android:id="@+id/player_choice"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/player_choice"
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginBottom="124dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/difficulty_pick"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintVertical_bias="0.38"/>

   <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/player_et"
      android:text="@string/player_et"
      android:textColor="#ffffff"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      android:layout_marginTop="8dp"
      android:inputType="textImeMultiLine|textNoSuggestions"
      app:layout_constraintTop_toBottomOf="@+id/player_choice"
      android:layout_marginRight="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"/>
   <Button
      android:id="@+id/start_game"
      android:text="@string/start_game"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/player_et"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"
      app:layout_constraintVertical_bias="1.0"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      android:onClick="StartGame"/>



</android.support.constraint.ConstraintLayout>
