<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table_felt"
    tools:context="com.example.lenni.blackjack_ptm.GameActivity">
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dealer_score"
        android:text="@string/dealer_score"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        />
    <TableRow
        android:id="@+id/dealer_hand"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dealer_score"

        >
        <ImageView
            android:id="@+id/dealer_1"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:id="@+id/dealer_2"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:id="@+id/dealer_3"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:id="@+id/dealer_4"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:id="@+id/dealer_5"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dealer_hand"
        android:text="@string/player_score"
        android:textColor="#ffffff"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>
    <TableRow
        android:id="@+id/player_hand"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_score"

        >
        <ImageView
            android:id="@+id/player_1"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/player_2"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/player_3"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/player_4"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/player_5"
            android:src="@drawable/back_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
    </TableRow>


    <ImageButton
        android:id="@+id/hit"
        android:layout_below="@id/player_hand"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/casino_chip"
        android:text="@string/hit_me"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/exit"
        />
</RelativeLayout>
